--- a/css/glitch.css
+++ b/css/glitch.css
@@ -3,7 +3,7 @@
     --shadow-primary: #0e101c;
     --shadow-secondary: #9216a8;
     --primary: var(--white);
-    --text-color: var(--white); /* S'assurer que cette variable est définie ici si elle est utilisée par le glitch */
+    --text-color: var(--white);
 
     --clip-one: inset(0 0 0 0);
     --clip-two: inset(0.2em 0 0.1em 0);
@@ -58,9 +58,6 @@
     -webkit-animation: glitch 2s forwards, glitch-pseudo 2s forwards alternate;
     animation: glitch 2s forwards, glitch-pseudo 2s forwards alternate;
 }
-
-
-
 
 @-webkit-keyframes glitch {
     0% {
