--- a/css/header-footer.css
+++ b/css/header-footer.css
@@ -34,11 +34,11 @@ header .title a {
     white-space: nowrap;
 }
 
-.nav_bar {
+.nav-bar {
     margin-left: auto;
 }
 
-.nav_bar ul {
+.nav-bar ul {
     list-style: none;
     display: flex;
     border-bottom: 2px solid var(--white);
@@ -46,11 +46,11 @@ header .title a {
     margin: 0;
 }
 
-.nav_bar li {
+.nav-bar li {
     display: block;
 }
 
-.nav_bar li a {
+.nav-bar li a {
     display: block;
     color: var(--white);
     padding: 7px 20px;
@@ -58,11 +58,11 @@ header .title a {
     transition: background-color 0.3s ease;
 }
 
-.nav_bar li:hover a {
+.nav-bar li:hover a {
     background-color: var(--light-grey);
 }
 
-.nav_bar li.active a {
+.nav-bar li.active a {
     background-color: var(--white);
     color: var(--black);
 }
@@ -94,9 +94,10 @@ footer img {
     width: 100px;
     vertical-align: middle;
     margin: 20px;
+    filter: grayscale(1) opacity(0.7);
 }
 
-footer .footer_legal {
+footer .footer-legal {
     max-width: 800px;
     width: 90%;
     margin: 0 auto;
@@ -112,7 +113,7 @@ footer .footer_legal {
         display: block;
     }
 
-    header .nav_bar {
+    header .nav-bar {
         display: block;
         position: fixed;
         top: 76px;
@@ -126,16 +127,16 @@ footer .footer_legal {
         margin-left: 0;
     }
 
-    header.header-active .nav_bar {
+    header.header-active .nav-bar {
         top: 56px;
         right: 0px;
     }
 
-    header .nav_bar.open {
+    header .nav-bar.open {
         transform: translateX(0);
     }
     
-    .nav_bar ul {
+    .nav-bar ul {
         flex-direction: column;
         border-bottom: none;
         background-image: url(../images/header_background_blured3.webp);
@@ -145,15 +146,15 @@ footer .footer_legal {
         overflow: hidden;
     }
 
-    .nav_bar li a {
+    .nav-bar li a {
         padding: 7px 15px;
     }
     
-    .nav_bar li.active a {
+    .nav-bar li.active a {
         border-radius: 0;
     }
 
-    footer .footer_legal {
+    footer .footer-legal {
         width: 100%;
     }
 }
