--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,6 @@
     --border-dark: #222;
     --border-medium: #444;
     --border-light-dashed: #555;
-    --accent-color: #3498db;
     --easy: #17b32c;
     --medium: #cbce1e;
     --hard: #d7650e;
@@ -52,4 +51,49 @@ body {
     font-size: 100%;
     background: var(--grey) url(../images/back.webp) no-repeat center center/cover;
     color: var(--white);
+}
+
+h2 {
+    position: relative;
+    font-size: 50px;
+    font-style: italic;
+    text-transform: uppercase;
+    color: var(--white);
+}
+
+h3 {
+    font-size: 30px;
+    font-weight: normal;
+    color: var(--white);
+}
+
+.difficulty-tag {
+    padding: 4px 12px;
+    font-size: 12px;
+    font-weight: 700;
+    border-radius: 15px;
+    color: var(--white);
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);
+    flex-shrink: 0;
+    margin-left: 15px;
+}
+
+.difficulty-easy {
+    background-color: var(--easy);
+    box-shadow: 0 0 8px var(--easy);
+}
+
+.difficulty-medium {
+    background-color: var(--medium);
+    box-shadow: 0 0 8px var(--medium);
+}
+
+.difficulty-hard {
+    background-color: var(--hard);
+    box-shadow: 0 0 8px var(--hard);
+}
+
+.difficulty-expert {
+    background-color: var(--expert);
+    box-shadow: 0 0 8px var(--expert);
 }
