--- a/css/index.css
+++ b/css/index.css
@@ -4,7 +4,7 @@
     justify-content: flex-start;
     align-items: center;
     width: 100%;
-    min-height: 100svh; 
+    min-height: 100lvh; 
     padding-top: 20vh;
 }
 
@@ -52,7 +52,7 @@
     justify-content: flex-start;
     align-items: center;
     width: 100%;
-    min-height: 100svh; 
+    min-height: 100lvh; 
     padding-top: 15vh;
     position: relative;
     overflow: hidden;
